[tool.poetry]
name = "pasmo-bill-maker"
version = "0.1.0"
description = ""
authors = ["shtmjp <shtm.1058@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.1.1"
ipykernel = "^6.29.5"
pytest = "^8.3.3"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"
pydantic = "^2.9.1"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
